Some changes 0_o (rly, i dunno :P)

--- a/src/Makefile
+++ b/src/Makefile
@@ -4,7 +4,7 @@ Target = pang
 TargetPath = ../
 
 CXX = g++
-CXXFLAGS = -g -Wall -Wextra -O2 -std=c++11
+CXXFLAGS = -g -Wall -Wextra -O2 -std=c++11 -pedantic
 LDFLAGS = -lsfml-system -lsfml-window -lsfml-graphics
 
 MAIN_OBJECTS = main.o \
